--- a/Dia 1.1/index.html
+++ b/Dia 1.1/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
+    <script src="./main.js"></script>
     <title>Dia 1.1</title>
 </head>
 <body>
     <div class="corpo">
         <h1>Integrantes totais no squad: 0</h1>
-        <button class="botao" type="button">Adicionar</button>
+        <div class="botoes">
+            <button class="botaoa" type="button">Adicionar</button>
+            <button class="botaor" type="button">Remover</button>
+        </div>
     </div>
 </body>
 </html>
