--- a/Dia 1.1/index.html
+++ b/Dia 1.1/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div class="corpo">
-        <h1>Integrantes totais no squad: 0</h1>
+        <h1>Integrantes totais no squad: </h1>
+        <h1 id="num">0</h1>
         <div class="botoes">
             <button class="botaoa" type="button">Adicionar</button>
             <button class="botaor" type="button">Remover</button>
