--- a/Dia 3.1/index.html
+++ b/Dia 3.1/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dia 3.1</title>
+    <link rel="stylesheet" href="./main.css">
+    <script defer src="./script.js"></script>
 </head>
 <body>
-    
+    <header>
+        <h1>Nome Squad</h1>
+    </header>
+
+    <div class="corpo">
+        <div class="card">
+            <h1>SERRA JUNIOR ENGENHARIA</h1>
+            <img src="./LogoSerra.png" alt="logo">
+        </div>
+        <button id="botão"><p>Mostra/Esconde Card</p></button>
+    </div>
+
+    <footer>
+        <p>COPYRIGTH &copy 2020 - SERRA JUNIOR ENGENHARIA</p>
+    </footer>
 </body>
 </html>
