--- a/Dia 3.1/index.html
+++ b/Dia 3.1/index.html
@@ -18,7 +18,7 @@
             <h1>SERRA JUNIOR ENGENHARIA</h1>
             <img src="./LogoSerra.png" alt="logo">
         </div>
-        <button id="botão"><p>Mostra/Esconde Card</p></button>
+        <button onclick="funcao()" id="botão"><p>Mostra/Esconde Card</p></button>
     </div>
 
     <footer>
